--- a/app/posts/ctf-in-education/index.mdx
+++ b/app/posts/ctf-in-education/index.mdx
@@ -17,14 +17,14 @@ export const metadata = {
     description: "In a competitive and enjoyment setting, implementation and usage of CTF challenges can be obvious, but for purely educational purpose, there can be challenges and benefits other than the tasks itself.",
     image: previewImage,
     toc: false,
-    // draft: "0196a5fa-a0ae-74ea-9a3b-16bce341ae6a" 
+    // draft: "0196a5fa-a0ae-74ea-9a3b-16bce341ae6a"
 };
 
 {/* Constraints on the resources and maintaining the fairness in teaching of cybersecurity can be challenging. */}
 
 
 <figure className="flex flex-col items-center pt-[1rem] pb-[1rem]">
-    <img 
+    <img
         src={previewImage}
         alt="Gothic-style University with a flag on the roof"
         className="rounded"
@@ -39,7 +39,7 @@ export const metadata = {
 
 What does it take to provide technical, and especially Capture the Flag (CTF)-like cybersecurity exercises for students in an academic context?
 You may wonder what is so special here if you are familiar with the existing general scene, but there are challenges related to both resource optimisation for teachers and the overall fairness and efficiency of the teaching methodology itself, not to mention the existence of LLMs.
-This post is about discussing the technical cybersecurity teaching, required skills, suitability of CTF-like challenges to combat LLM existence and the current state of the technical solutions.  
+This post is about discussing the technical cybersecurity teaching, required skills, suitability of CTF-like challenges to combat LLM existence and the current state of the technical solutions.
 
 
 {/* {<Toc></Toc>} */}
@@ -49,17 +49,17 @@ This post is about discussing the technical cybersecurity teaching, required ski
 In a higher-level education, students are aiming to certain degree, where the degree certification, grades of the courses and possible thesis should matter and represent their skills, consumed time and effort somewhat correctly.
 It is a way to signal in a job-market while no credential is a perfect proxy for ability.
 
-Skills they learn are hopefully useful in real life but should not be completely tied to a specific time and place, e.g. contrary to some applied sciences. 
-A common thought is that the teaching and material should be *visionary* on some level; what kind of information should future generations possess? 
-Are we supporting the learning process of future, more complex information? 
-As it happens to be, denominator among the different pedagogical approaches is jointly underline the importance of long-term future orientation and higher-order thinking, which has an association for *deep learning* [^2]. 
-This is often visible in the university studies that enforce deep learning; subjects can be abstracted and practical skills might be omitted or reduced. 
-Practical skills are sometimes thought to be "novice" and be more relevant to be acquired with surface-level learning. 
+Skills they learn are hopefully useful in real life but should not be completely tied to a specific time and place, e.g. contrary to some applied sciences.
+A common thought is that the teaching and material should be *visionary* on some level; what kind of information should future generations possess?
+Are we supporting the learning process of future, more complex information?
+As it happens to be, denominator among the different pedagogical approaches is jointly underline the importance of long-term future orientation and higher-order thinking, which has an association for *deep learning* [^2].
+This is often visible in the university studies that enforce deep learning; subjects can be abstracted and practical skills might be omitted or reduced.
+Practical skills are sometimes thought to be "novice" and be more relevant to be acquired with surface-level learning.
 
 This brings challenges to technical fields like cybersecurity.
-You should be capable of high-level thinking while also having a wide range of technical skills and background knowledge. 
+You should be capable of high-level thinking while also having a wide range of technical skills and background knowledge.
 You need to understand how different complex systems work and interact with each other.
-In a volatile field where information keeps changing, likely more than in many other fields, and new tools emerge every day or some designs become obsolete overnight, you cannot focus too much on a single thing at a specific time. 
+In a volatile field where information keeps changing, likely more than in many other fields, and new tools emerge every day or some designs become obsolete overnight, you cannot focus too much on a single thing at a specific time.
 However, if you don't focus *enough*, then in practice, your skills might not be that useful or relevant at all.
 There is a saying that you will learn that at work, and some industries might be even dismissive about the overall benefits of university education.
 The problem arises if you don't get the first job or you don't know enough about the field to come up with a valid business idea and found your own company, or you simply don't have the skills to deliver your idea.
@@ -75,7 +75,7 @@ An endless debate continues about which type of motivation should be encouraged,
 | **Intrinsic** | Arises from curiosity, joy, and personal interest; the activity itself is satisfying. | Often leads to deep learning - students explore topics beyond requirements, seek connections, and engage meaningfully. |
 | **Extrinsic** | Tied to external rewards such as grades, certification, recognition, or avoiding negative consequences. | Typically results in surface-level learning - focusing on minimum requirements and memorisation rather than understanding. |
 
-In the context of cybersecurity, you may have heard the word *hacker*. 
+In the context of cybersecurity, you may have heard the word *hacker*.
 For some people, the origin is surprising since it is not related to malicious activity or software exploitation.
 Rather, it is about the spirit itself - something that is done in the spirit of playfulness and exploration.
 Quoting Richard Stallman, the creator of GNU Project and Free Software Foundation, about hackers and software [^4]:
@@ -85,14 +85,14 @@ Quoting Richard Stallman, the creator of GNU Project and Free Software Foundatio
 A more recent academic definitions are somewhat related to previous hacker definition - e.g. Bratus et. al. [^5] defines *hacking* as "the ability to question the trust assumptions in
 the design and implementation of computer systems rather than any negative use of such skills."
 
-You may see where this is going. 
+You may see where this is going.
 We can assume that hackers were highly intrinsically motivated, which resulted in pushing the boundaries of software and innovation in different areas.
 With the inclusion of higher-order thinking, this perhaps allowed them to go beyond what the system was originally intended for.
-Unfortunately, sometimes the context matters more than statistical occurrence of ill-advised decisions, and ultimately, that has altered the meaning of the term, when journalist and law-enforcements adapted it. 
+Unfortunately, sometimes the context matters more than statistical occurrence of ill-advised decisions, and ultimately, that has altered the meaning of the term, when journalist and law-enforcements adapted it.
 
 We may see hackers as some sort of talented wizards, but where is the line between high motivation and pure intelligence and talent?
-Personally, I believe that with sufficient motivation you can reach quite many things, but the limiting factor is always the time, which isn't original thought at all. 
-Intelligence and talent can substantially reduce the required time to achieve such things, and curiosity is often tied to intelligence, which in further boosts the intrinsic motivation. 
+Personally, I believe that with sufficient motivation you can reach quite many things, but the limiting factor is always the time, which isn't original thought at all.
+Intelligence and talent can substantially reduce the required time to achieve such things, and curiosity is often tied to intelligence, which in further boosts the intrinsic motivation.
 You might have heard the word *passion*, and it can be a synonym for intrinsic motivation.
 Most people we see in the talented group were able to go much further than others in a similar time frame, though we may not see the whole truth.
 
@@ -120,7 +120,7 @@ LLMs are here to stay, at least until we run out of electricity.
 While we cannot yet outsource reasoning to LLMs completely, they excel at knowledge retention based on *the data they were trained on*, unless provided with more contextual information.
 
 While I was writing this text (it took actually many days), another a bit similar post appeared in Hacker News [^7] where the comments shared a lot of my thoughts, but can also offer more perspective than I have here.
-However, I would argue that we can do more than just demand for the prompt. 
+However, I would argue that we can do more than just demand for the prompt.
 
 If teaching methods and evaluations are based mainly on knowledge retention, and students are mostly motivated by extrinsic factors, we can be sure they will take the path of least resistance.
 If course credentials depend on artifacts students create (such as text, code, or other deliverables), students will use whatever means necessary to generate those artifacts with the least amount of effort where the associated risk for negative penalty is negligible.
@@ -174,7 +174,7 @@ How would these comics look if an LLM were always available?
 
 
 
-LLMs can replace manuals or specifications when contextual information is needed quickly to apply a tool or complete part of a process, when the consequence of applying misinformation (or hallucinations) is negligible, or the assumption for correctness is high enough. 
+LLMs can replace manuals or specifications when contextual information is needed quickly to apply a tool or complete part of a process, when the consequence of applying misinformation (or hallucinations) is negligible, or the assumption for correctness is high enough.
 Assuming you know what needs to be done and understand the end goal, *the artifact generator* can help you achieve it faster.
 
 Maybe we can think this as an improvement, as it reduces cognitive load, freeing up mental capacity for other tasks.
@@ -199,6 +199,7 @@ Is it possible that it also awakens the spiritual hacker within the student?
 For some, it may not, but it still enforces the process-oriented learning and you need to think at least a bit.
 Maybe we can say that the correct approach using CTF-like tasks addresses the requirements for high-level thinking and technical skills, while also offering an effective automatic evaluation mechanism, if implemented in a specific way.
 This helps scale teaching and reduces the time needed for assessing tasks, which might otherwise be mostly LLM-generated.
+Of course, we could force students to take exams in controlled environment, but then we need to review the tasks and the evaluation is based more about knowledge retention, rather than students using their computers to solve problems in a creative way.
 
 For a very complex tasks, we could still require write-ups and manual review instead of using flag-based evaluation, since even with an LLM, the end artifact may be more beneficial, and not all students attempt these most challenging tasks.
 However, if the default assumption is that an editor's or terminal's *autocomplete* can automatically complete tasks, it is not useful to spend time reviewing such tasks or even to consider them worthy of achievement.
@@ -207,10 +208,10 @@ However, if the default assumption is that an editor's or terminal's *autocomple
 
 The original CTF competition and the term in a cybersecurity context goes back to DEF CON conference in 1996.
 There were no strict rules, and the original competition somewhat resembled the "old-school CTF".
-Players tried to replace their opponents' flags with their own, but just in computer systems that they created themselves (a.k.a. attack-defence format) [^8]. 
+Players tried to replace their opponents' flags with their own, but just in computer systems that they created themselves (a.k.a. attack-defence format) [^8].
 Later on, the *jeopardy* format has started to dominate in general, where the organisers provide the flags and participants simply try to find them.
 
-The gamification of computer and network security is thought to greatly improve the technical skills of the participants, though perhaps not as effectively developing general awareness and social aspects. 
+The gamification of computer and network security is thought to greatly improve the technical skills of the participants, though perhaps not as effectively developing general awareness and social aspects.
 Gamification in education itself is a very known approach to improve the motivation and engagement.
 We note only the jeopardy format here, while the attack/defence approach is also important and is usually taught with [Cyber Range platforms](https://en.wikipedia.org/wiki/Cyber_range).
 The jeopardy format might allow us to teach skills from very different areas and levels and possibly scale indefinitely.
@@ -236,7 +237,7 @@ In the Hack The Box platform and machine exploitation contexts, changing the fla
 
 Connor David Nelson has somewhat recently finished his PhD "Hacking the Learning Curve
 Effective Cybersecurity Education at Scale" [^9] that covers current education and the state of the art.
-Thesis also introduced DOJO [^10] platform (CTFd plugin) which empowers https://pwn.college/, by further trying to improve the area in educational setting, and they have succeed a lot. 
+Thesis also introduced DOJO [^10] platform (CTFd plugin) which empowers https://pwn.college/, by further trying to improve the area in educational setting, and they have succeed a lot.
 Some of the DOJO features are listed below (I highly recommend looking at the paper, it also covers similar problems as mentioned earlier):
     * Every flag is unique and cryptographically tied to a student
     * The is a templating system to provide slight variations for the tasks in some cases
@@ -265,12 +266,15 @@ The table is from the paper that presents DOJO [^10].
 </figure>
 
 
-Alpaca and SecGen are based on generating random tasks using known CVEs. 
-picoCTF is deprecated, so it seems that we might have only one platform with dynamic support!.
+Alpaca and SecGen are based on generating random tasks using known CVEs.
+picoCTF is deprecated, so it seems that we might have only one platform with dynamic support!
 
-The world was somewhat unprepared for LLMs and their impact on education, and we lack platforms that could help create efficient technical exercises to evaluate student skills correctly. 
-Maybe we see more development on this area in the future. 
-We should definitely seek new approaches to technical teaching in cybersecurity, as we can no longer use knowledge retention as a measurement of skill.
+The world was somewhat unprepared for LLMs and their impact on education, and we lack platforms that could help create efficient technical exercises to evaluate student skills correctly.
+Maybe we see more development on this area in the future.
+We should definitely seek new approaches to technical teaching in cybersecurity, as we can no longer use knowledge retention as main measurement of skill.
+We coud force students to take traditional exams in supervised classrooms, but maybe that should be only a minor aspect, and only for the knowledge that must be remembered by students itself.
+What that information is - it is difficult to determine.
+If students have access to the LLMs in their job, we should teach their problem solving skills and thinking so that they can get most benefits from them.
 
 
 [^1]: [CSC](csc.fi) is a non-profit limited liability company with a special mission, owned by the Finnish Government and Finnish higher education institutions.
@@ -279,7 +283,7 @@ We should definitely seek new approaches to technical teaching in cybersecurity,
 [^3]: See self-determination theory (SDT) or Biggs' 3-P Model.
 [^4]: From the documentary [Hackers: Wizards of the Electronic Age](https://en.wikipedia.org/wiki/Hackers:_Wizards_of_the_Electronic_Age) in 1985
 [^5]: Bratus, S., Shubina, A., & Locasto, M. E. (2010). Teaching the principles of the hacker curriculum to undergraduates. In Proceedings of the 41st ACM Technical Symposium on Computer Science Education (SIGCSE ’10) (pp. 122–126). Association for Computing Machinery. https://doi.org/10.1145/1734263.1734303
-[^6]: There is much more. See also e.g., Bloom's taxonomy. 
+[^6]: There is much more. See also e.g., Bloom's taxonomy.
 [^7]: [I'd rather read the prompt ](https://claytonwramsey.com/blog/prompt/). Comments in [here.](https://news.ycombinator.com/item?id=43888803)
 [^8]: [Defcon Capture the Flag: defending vulnerable code from intense attack](https://ieeexplore.ieee.org/document/1194878)
 [^9]: Nelson, C. D. (2024). Hacking the Learning Curve: Effective Cybersecurity Education at Scale (Doctoral dissertation, Arizona State University).
